# CCR

./: .gitignore  README.md  bug-bash-109.md  pyproject.toml
brain/: __init__.py  amygdala.py  arbiter.py  calibration.py  hippocampus.py
brain/cortex/: __init__.py  backbones.py  predictive.py
brain/neuromod/: __init__.py  modulation.py
bridge/fake/: sim_bridge.py
bridge/mineflayer/: README.md  actions.js  blocks.js  index.js  observation.js  package.json  pixels.js  world.js
cognitive_runtime/: __init__.py  __main__.py  cli.py
cognitive_runtime/core/: __init__.py  action.py  action_registry.py  action_space.py  attention.py  entity_features.py  entity_persistence.py  entity_tracker.py  hashing.py  learner.py  memory.py  modulation.py  novelty.py  observation.py  orienting_reflex.py  perception.py  policy.py  priority.py  program.py  reward.py  world_model.py
cognitive_runtime/models/: __init__.py  online_q.py  vision.py
cognitive_runtime/neural/: __init__.py  checkpoint.py  encoder.py  entity_persistence.py  experience_queue.py  fusion.py  live_fusion.py  (+8 more)
development/: __init__.py  definitions.py  ladder.py  runner.py
docs/: architecture.md  childhood-runs.md  curriculum.md  future-ai-os.md  minecraft-mvp.md  neural-stream-agent.md  nursery-turn-in-place-analysis.md  nursery-walk-forward-validation.md  online-learning.md  program-interface.md  reward_profiles.md  streams.md
goals/: ender_dragon.yaml  intrinsic_only.yaml  survival.yaml
motor/: __init__.py  cortex_mpc.py  organism_policy.py  policy.py  reflexes.py  voluntary.py
notebooks/: README.md  build_and_diagnose_organism.ipynb  nursery_pathfinder_workflow.ipynb
sleep/: __init__.py  async_trainer.py  cortex_consolidation.py  dream.py  forgetting.py  replay.py  replay_mix.py  schedule.py  weight_publisher.py
tests/: test_action_registry.py  test_action_world_model.py  test_actor_critic_acceptance.py  test_actor_critic_models.py  test_actor_critic_policy.py  test_actor_critic_runtime.py  test_amygdala.py  test_arbiter.py  test_async_actor_learner_integration.py  test_async_trainer.py  test_attention.py  test_calibration.py  test_cli_cortex_consolidation.py  test_core.py  test_cortex_backbones.py  test_cortex_consolidation.py  test_cortex_mpc.py  test_cortex_world_model.py  test_cortex_world_model_consolidation.py  test_crafter_scenarios.py  test_crafter_world.py  test_curriculum.py  test_curriculum_runner.py  test_development_ladder.py  test_dream.py  test_efference_record.py  test_ego_motion_canary.py  test_encoders.py  test_entity_persistence_phase_d.py  test_evaluation_gates.py  test_expanded_actions.py  test_experience_queue.py  test_forgetting_metric.py  test_frame_store.py  test_generative_replay.py  test_hippocampus.py  test_input_profile.py  test_intrinsic_drive.py  test_latent_fusion.py  test_live_fusion.py  (+45 more)
viewer/: README.md  __init__.py  export_predictions.py  package.json  server.js
(+196 files in other folders)
