[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-runtime"
version = "0.1.0"
description = "Continuous Cognitive Runtime: an always-running cognitive system that inhabits interactive worlds (Minecraft SurvivalBox MVP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ccr = "cognitive_runtime.cli:main"

[tool.setuptools.packages.find]
include = ["cognitive_runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
