[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-runtime"
version = "0.1.0"
description = "Continuous Cognitive Runtime: an always-running cognitive system that inhabits interactive worlds (Minecraft SurvivalBox MVP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Neural pixel vision (end-to-end behavioral cloning). Optional: the whole
# pure-Python stack (loop, streams, simulated/remote backends, the linear BC
# trainer and every heuristic encoder) runs without it. Only the pixel CNN,
# its trainer and the neural policy import torch, always lazily.
neural = ["torch>=2", "numpy>=1.23"]

[project.scripts]
ccr = "cognitive_runtime.cli:main"

[tool.setuptools.packages.find]
include = ["cognitive_runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
