[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-runtime"
version = "0.1.0"
description = "Continuous Cognitive Runtime: an always-running cognitive system that inhabits interactive worlds (Minecraft SurvivalBox MVP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# numpy is core: pixel frames flow as arrays from the backend/bridge boundary
# through fusion, the binary frame store and the recorder, whether or not
# torch (the neural extra) is installed.  PyYAML is core: reward profiles
# (issue #41, --reward-profile) are the one place YAML is the primary format.
dependencies = ["numpy>=1.23", "PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Neural pixel vision (end-to-end behavioral cloning). Optional: the whole
# pure-Python stack (loop, streams, simulated/remote backends, the linear BC
# trainer and every heuristic encoder) runs without it. Only the pixel CNN,
# its trainer and the neural policy import torch, always lazily.
neural = ["torch>=2"]

[project.scripts]
ccr = "cognitive_runtime.cli:main"

[tool.setuptools.packages.find]
include = ["cognitive_runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
